# sudoku-playground

./: README.md  pyproject.toml
sudoku/: board.py  solver.py
tests/: test_board.py  test_solver.py
