[tool.poetry]
name = "sudoku-playground"
version = "0.1.0"
description = ""
authors = ["Sten Remmelg <sten.remmelg@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.2"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "^0.910"
isort = "^5.9.3"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
